--- a/FSDemo.html
+++ b/FSDemo.html
@@ -4,7 +4,7 @@
         <title>Full Sail Demo Site</title>  
     </head>
     <body>
-        <p>Hello we are getting this ok ok ok!!!!!!</p>
+        <p>Hello we are getting this OK! Yes Yes! OK! Starting t get Github!!!!</p>
     </body>
 	<script type="text/javascript" src="FSDemo.js"></script>    
 </html> 
